samples/_failures_safe/1761296756_f81054_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95f0028b.c: In function ‘main’:
./samples/SAFE/__tmp_95f0028b.c:148:42: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  148 |                 if (add_matrices(&mat1, &mat
      |                                          ^~~
      |                                          mat2
./samples/SAFE/__tmp_95f0028b.c:148:42: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_95f0028b.c:148:45: error: expected ‘)’ at end of input
  148 |                 if (add_matrices(&mat1, &mat
      |                                 ~           ^
      |                                             )
./samples/SAFE/__tmp_95f0028b.c:148:21: error: too few arguments to function ‘add_matrices’
  148 |                 if (add_matrices(&mat1, &mat
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_95f0028b.c:93:5: note: declared here
   93 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_95f0028b.c:148:17: error: expected declaration or statement at end of input
  148 |                 if (add_matrices(&mat1, &mat
      |                 ^~
./samples/SAFE/__tmp_95f0028b.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95f0028b.c:148:17: error: expected declaration or statement at end of input
